[package]
name = "rust-grammar"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
gll = "0.0.2"
proc-macro2 = "0.4.0"
structopt = "0.2.12"
walkdir = "2.2.6"
rayon = "1.0.3"
derive_more = "0.13.0"
serde_derive = "1.0.85"
toml = "0.4.10"
serde = "1.0.85"
failure = "0.1.5"
insta = "0.7.4"
crossbeam = "0.7.1"
regex = "1.1.6"
lazy_static = "1.3.0"

[build-dependencies]
gll = "0.0.2"
walkdir = "2.2.6"

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[[bin]]
name = "snapshots"
path = "src/bin/snapshots.rs"

[patch.'crates-io']
gll = { git = "https://github.com/cad97/gll", rev = "a6caa18976239f9e259df9b33f9ce6fea8b7df7c" }
grammer = { git = "https://github.com/lykenware/grammer", rev = "e108acbe83271761538bf5b2ff2daeaaafa5919c" }
