[package]
name = "rust-grammar"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
gll = "0.0.2"
proc-macro2 = "0.4.0"
structopt = "0.2.12"
walkdir = "2.2.6"
rayon = "1.0.3"
derive_more = "0.13.0"
serde_derive = "1.0.85"
toml = "0.4.10"
serde = "1.0.85"
failure = "0.1.5"
insta = "0.7.4"
crossbeam = "0.7.1"
regex = "1.1.6"
lazy_static = "1.3.0"

[build-dependencies]
gll = "0.0.2"
walkdir = "2.2.6"

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[[bin]]
name = "snapshots"
path = "src/bin/snapshots.rs"

[patch.'crates-io']
gll = { git = "https://github.com/rust-lang/gll", rev = "bc72820905eac498c1fb1cc644e931d63e7d07e3" }
grammer = { git = "https://github.com/lykenware/grammer", rev = "eb47b51a9332c0e82d7c02d988e203d2a01f3654" }
