[package]
name = "rust-grammar"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
gll = "0.0.2"
proc-macro2 = "0.4.0"
structopt = "0.2.12"
walkdir = "2.2.6"
rayon = "1.0.3"
derive_more = "0.13.0"
serde_derive = "1.0.85"
toml = "0.4.10"
serde = "1.0.85"
failure = "0.1.5"
insta = "0.7.4"
crossbeam = "0.7.1"
regex = "1.1.6"
lazy_static = "1.3.0"

[build-dependencies]
gll = "0.0.2"
walkdir = "2.2.6"

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[[bin]]
name = "snapshots"
path = "src/bin/snapshots.rs"

[patch.'crates-io']
gll = { git = "https://github.com/rust-lang/gll", rev = "26d42a0117b9c48538ef20c872742e05070bb55e" }
grammer = { git = "https://github.com/lykenware/grammer", rev = "6f6f1320336d84b75805907fb302a28cb6d4cfb0" }
